--- a/style.css
+++ b/style.css
@@ -2,6 +2,25 @@
 *** GENERAL
 **********************************************/
 
+/* .final-score {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 520px;
+  color: #555;
+  font-size: 18px;
+  font-family: 'Lato';
+  text-align: center;
+  padding: 10px;
+  width: 160px;
+  transform: uppercase;
+}
+
+.final-score: focus { outline: none; }
+
+#dice-1 { top: 120px; }
+#dice-2 { top: 250px; } */
+
 * {
     margin: 0;
     padding: 0;
@@ -144,7 +163,7 @@ i {
 .dice {
     position: absolute;
     left: 50%;
-    top: 178px;
+    top: 150px;
     transform: translateX(-50%);
     height: 100px;
     box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
